// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card > renders with title 1`] = `
<div
  class="card-modern overflow-hidden animate-fade-in "
>
  <div
    class="flex items-center justify-between border-b px-6 py-4"
    style="border-color: var(--border-light);"
  >
    <h3
      class="text-heading-3 text-gray-900 dark:text-white"
    >
      Test Basligi
    </h3>
  </div>
  <div
    class="px-6 py-5"
  >
    <p>
      İçerik
    </p>
  </div>
</div>
`;

exports[`Card > renders with title and action 1`] = `
<div
  class="card-modern overflow-hidden animate-fade-in "
>
  <div
    class="flex items-center justify-between border-b px-6 py-4"
    style="border-color: var(--border-light);"
  >
    <h3
      class="text-heading-3 text-gray-900 dark:text-white"
    >
      Ayarlar
    </h3>
    <div
      class="flex items-center gap-2"
    >
      <button>
        Kaydet
      </button>
    </div>
  </div>
  <div
    class="px-6 py-5"
  >
    <p>
      Form alanlari
    </p>
  </div>
</div>
`;

exports[`Card > renders without title 1`] = `
<div
  class="card-modern overflow-hidden animate-fade-in "
>
  <div
    class="px-6 py-5"
  >
    <p>
      Sadece içerik
    </p>
  </div>
</div>
`;
